--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/988c5ae4f6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,6 +26,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste atque provident consequuntur maiores illum,
         laudantium perspiciatis nobis quod, asperiores voluptatem vel dolor quis, incidunt quibusdam voluptas est
         molestias reprehenderit harum.</p>
+    <i class="fa-solid fa-frog"></i>
 </body>
 
 </html>
