--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Hayley Greenough">
     <title>Hayley Greenough Portfolio</title>
-    <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
@@ -18,15 +17,18 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/988c5ae4f6.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
+    <div class="hero">
+        <h2>Hi I'm</h2>
+        <h1>Hayley Greenough</h1>
+        <p>Front end Developer, based in California</p>
 
-    <h1>Hayley Greenough</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste atque provident consequuntur maiores illum,
-        laudantium perspiciatis nobis quod, asperiores voluptatem vel dolor quis, incidunt quibusdam voluptas est
-        molestias reprehenderit harum.</p>
-    <i class="fa-solid fa-frog"></i>
+        <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i>Get Started</a>
+    </div>
 </body>
 
 </html>
