Added some button css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <h1>Hayley Greenough</h1>
         <p>Front end Developer, based in California</p>
 
-        <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i>Get Started</a>
+        <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Get Started</a>
     </div>
+    <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam </p>
+    <h2 class="mb-4">Weather App</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime rem rerum ad dignissimos
+        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.</p>
+    <a href="#" class="btn btn-branded-outline"> Launch Weather </a>
 </body>
 
 </html>
