--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
         <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Get Started</a>
     </div>
     <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam </p>
-    <h2 class="mb-4">Weather App</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime rem rerum ad dignissimos
-        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.</p>
-    <a href="#" class="btn btn-branded-outline"> Launch Weather </a>
+    <div class="row">
+        <div class="col">
+            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
+        </div>
+        <div class="col">
+            <h2 class="mb-4">Weather App</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime rem rerum ad
+                dignissimos
+                aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.</p>
+            <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank" class="btn btn-branded-outline">
+                Launch Weather App</a>
+        </div>
+    </div>
 </body>
 
 </html>
