--- a/index.html
+++ b/index.html
@@ -49,6 +49,47 @@
             </div>
         </div>
     </div>
+
+    <div class="row mb-5">
+        <div class="col">
+            <div class="site-description">
+                <h2 class="mb-4">Weather App</h2>
+                <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime
+                    rem
+                    rerum ad
+                    dignissimos
+                    aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.
+                </p>
+                <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
+                    class="btn btn-branded-outline mt-4">
+                    Launch Weather App</a>
+            </div>
+        </div>
+        <div class="col">
+            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
+        </div>
+
+    </div>
+
+    <div class="row mb-5">
+        <div class="col">
+            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
+        </div>
+        <div class="col">
+            <div class="site-description">
+                <h2 class="mb-4">Weather App</h2>
+                <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime
+                    rem
+                    rerum ad
+                    dignissimos
+                    aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.
+                </p>
+                <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
+                    class="btn btn-branded-outline mt-4">
+                    Launch Weather App</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
