Added second homepage block content
Ai pet name generator

--- a/index.html
+++ b/index.html
@@ -29,64 +29,74 @@
 
         <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Get Started</a>
     </div>
-    <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam </p>
-    <div class="row mb-5">
-        <div class="col">
-            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
-        </div>
-        <div class="col">
-            <div class="site-description">
-                <h2 class="mb-4">Weather App</h2>
-                <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime
-                    rem
-                    rerum ad
-                    dignissimos
-                    aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.
-                </p>
-                <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
-                    class="btn btn-branded-outline mt-4">
-                    Launch Weather App</a>
+
+    <div class="home-content-container">
+        <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam </p>
+        <div class="row mb-5">
+            <div class="col">
+                <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid homepage-img">
+            </div>
+            <div class="col">
+                <div class="site-description">
+                    <h2 class="mb-4">Weather App</h2>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
+                        maxime
+                        rem
+                        rerum ad
+                        dignissimos
+                        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
+                        similique.
+                    </p>
+                    <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
+                        class="btn btn-branded-outline mt-4">
+                        Launch Weather App</a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="row mb-5">
-        <div class="col">
-            <div class="site-description">
-                <h2 class="mb-4">Weather App</h2>
-                <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime
-                    rem
-                    rerum ad
-                    dignissimos
-                    aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.
-                </p>
-                <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
-                    class="btn btn-branded-outline mt-4">
-                    Launch Weather App</a>
+        <div class="row mb-5">
+            <div class="col">
+                <div class="site-description">
+                    <h2 class="mb-4">AI Pet Name App</h2>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
+                        maxime
+                        rem
+                        rerum ad
+                        dignissimos
+                        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
+                        similique.
+                    </p>
+                    <a href="https://rolypoly-petnames.netlify.app/" target="_blank"
+                        class="btn btn-branded-outline mt-4">
+                        Launch AI Pet Name App</a>
+                </div>
             </div>
-        </div>
-        <div class="col">
-            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
+            <div class="col">
+                <img src="images/AIpetname.png" alt="AI pet name generator app homepage image"
+                    class="img-fluid homepage-img">
+            </div>
+
         </div>
 
-    </div>
-
-    <div class="row mb-5">
-        <div class="col">
-            <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid">
-        </div>
-        <div class="col">
-            <div class="site-description">
-                <h2 class="mb-4">Weather App</h2>
-                <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam maxime
-                    rem
-                    rerum ad
-                    dignissimos
-                    aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad similique.
-                </p>
-                <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
-                    class="btn btn-branded-outline mt-4">
-                    Launch Weather App</a>
+        <div class="row mb-5">
+            <div class="col">
+                <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid homepage-img">
+            </div>
+            <div class="col">
+                <div class="site-description">
+                    <h2 class="mb-4">Weather App</h2>
+                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
+                        maxime
+                        rem
+                        rerum ad
+                        dignissimos
+                        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
+                        similique.
+                    </p>
+                    <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
+                        class="btn btn-branded-outline mt-4">
+                        Launch Weather App</a>
+                </div>
             </div>
         </div>
     </div>
