Added last homepage content

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
         <div class="row mb-5">
             <div class="col">
-                <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid homepage-img">
+                <img src="images/WorldClock.png" alt="World clock homepage image" class="img-fluid homepage-img">
             </div>
             <div class="col">
                 <div class="site-description">
-                    <h2 class="mb-4">Weather App</h2>
+                    <h2 class="mb-4">World Clock App</h2>
                     <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
                         maxime
                         rem
@@ -93,9 +93,9 @@
                         aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
                         similique.
                     </p>
-                    <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
+                    <a href="https://incomparable-chebakia-506b4b.netlify.app/" target="_blank"
                         class="btn btn-branded-outline mt-4">
-                        Launch Weather App</a>
+                        Launch World Clock App</a>
                 </div>
             </div>
         </div>
