--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     </div>
 
     <div class="home-content-container">
-        <p class="text-center mt-5 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam </p>
+        <p class="text-center mt-5 mb-5 description-top-sentence">Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Sapiente quisquam </p>
         <div class="row mb-5">
-            <div class="col">
+            <div class="col d-none d-md-block">
                 <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid homepage-img">
             </div>
             <div class="col">
@@ -71,7 +72,7 @@
                         Launch AI Pet Name App</a>
                 </div>
             </div>
-            <div class="col">
+            <div class="col d-none d-md-block">
                 <img src="images/AIpetname.png" alt="AI pet name generator app homepage image"
                     class="img-fluid homepage-img">
             </div>
@@ -79,7 +80,7 @@
         </div>
 
         <div class="row mb-5">
-            <div class="col">
+            <div class="col d-none d-md-block">
                 <img src="images/WorldClock.png" alt="World clock homepage image" class="img-fluid homepage-img">
             </div>
             <div class="col">
