Added basic HTML/CSS about page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,23 @@
 </head>
 
 <body>
-    <h1>About Me</h1>
+    <div class="about-container">
+        <div class="row mt-5">
+            <div class="col content mt-3">
+                <h1 class="mb-4">Hi, I'm Hayley Greenough</h1>
+                <h2 class="mb-4">Frontend Developer, based in California</h2>
+                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo labore velit facere saepe
+                    sit illum
+                    alias quod quis nobis. Ullam iste beatae, harum fugiat iusto vel distinctio saepe provident
+                    reprehenderit!</p>
+                <a href="#" class="btn-branded text-decoration-none"> View Projects</a>
+            </div>
+            <di class="col profile-pic">
+                <img src="images/IMG_8887.jpg" alt="Profile Picture Hayley Greenough" class="img-fluid rounded border">
+            </di>
+        </div>
+    </div>
+
 </body>
 
 </html>
