Make classes more generic for pages
fixed div typo in about

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="about-container">
+    <div class="content-container">
         <div class="row mt-5">
             <div class="col-lg content mt-3">
                 <h1 class="mb-4">Hi, I'm Hayley Greenough</h1>
@@ -32,10 +32,10 @@
                     reprehenderit!</p>
                 <a href="/mywork.html" class="btn-branded text-decoration-none"> View Projects</a>
             </div>
-            <di class="col-lg profile-pic">
+            <div class="col-lg profile-pic">
                 <img src="images/IMG_8887.jpg" alt="Profile Picture Hayley Greenough"
                     class="img-fluid rounded border align-items-center">
-            </di>
+            </div>
         </div>
     </div>
 
