--- a/mywork.html
+++ b/mywork.html
@@ -22,10 +22,33 @@
 <body>
 
     <body>
-        <div class="content-container">
-
-            <h1 class="mb-4 content">Take a look at what I've been working on!</h1>
-
+        <div class="content-container mb-4">
+            <div class="content mt-5">
+                <h1 class="mb-4">Take a look at what I've been working on!</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="images/weather.png" alt="weather app" class="img-fluid rounded mb-3 my-work-unit">
+                    <h3 class="text-center">Weather App</h3>
+                    <p class="text-center">Built with HTML and CSS</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/WorldClock.png" alt="world clock app" class="img-fluid rounded mb-3 my-work-unit">
+                    <h3 class="text-center">World Clock App</h3>
+                    <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/AIpetname.png" alt="ai pet name app" class="img-fluid rounded mb-3 my-work-unit">
+                    <h3 class="text-center">AI Pet Name App</h3>
+                    <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/PleinAirApp.png" alt="plein air art app"
+                        class="img-fluid rounded mb-3 my-work-unit">
+                    <h3 class="text-center">Plein Air App</h3>
+                    <p class="text-center">Built with HTML and CSS</p>
+                </div>
+            </div>
         </div>
 
     </body>
