--- a/about.html
+++ b/about.html
@@ -21,6 +21,19 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
+            <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            </a>
+            <ul>
+                <li> <a href="/">Home </a></li>
+                <li> <a href="/about.html">About</a> </li>
+                <li> <a href="/mywork.html">My Work</a> </li>
+                <li> <a href="/contact.html">Contact Me</a> </li>
+            </ul>
+        </nav>
+    </div>
     <div class="content-container">
         <div class="row mt-5">
             <div class="col-lg content mt-3">
