--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me - Hayley Greenough</title>
+    <title>My Work - Hayley Greenough</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
@@ -17,10 +17,31 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/988c5ae4f6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/style.css">
-
 </head>
 
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
+            <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            </a>
+            <ul>
+                <li> <a href="/">Home </a></li>
+                <li> <a href="/about.html">About</a> </li>
+                <li> <a href="/mywork.html">My Work</a> </li>
+                <li> <a href="/contact.html">Contact Me</a> </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="content-container mb-4">
+        <div class="content mt-5">
+            <h1 class="mb-5">Let's get in touch!</h1>
+            <h3>Email</h3>
+            <h3>LinkedIn</h3>
+            <h3>Github</h3>
+        </div>
+
+    </div>
 
 </body>
 
