--- a/mywork.html
+++ b/mywork.html
@@ -21,37 +21,47 @@
 
 <body>
 
-    <body>
-        <div class="content-container mb-4">
-            <div class="content mt-5">
-                <h1 class="mb-4">Take a look at what I've been working on!</h1>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
+            <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            </a>
+            <ul>
+                <li> <a href="/">Home </a></li>
+                <li> <a href="/about.html">About</a> </li>
+                <li> <a href="/mywork.html">My Work</a> </li>
+                <li> <a href="/contact.html">Contact Me</a> </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="content-container mb-4">
+        <div class="content mt-5">
+            <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        </div>
+        <div class="row mt-3 content">
+            <div class="col-md-6 mt-3">
+                <img src="images/weather.png" alt="weather app" class="img-fluid rounded mb-3 my-work-unit">
+                <h3 class="text-center">Weather App</h3>
+                <p class="text-center">Built with HTML and CSS</p>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="images/weather.png" alt="weather app" class="img-fluid rounded mb-3 my-work-unit">
-                    <h3 class="text-center">Weather App</h3>
-                    <p class="text-center">Built with HTML and CSS</p>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/WorldClock.png" alt="world clock app" class="img-fluid rounded mb-3 my-work-unit">
-                    <h3 class="text-center">World Clock App</h3>
-                    <p class="text-center">Built with HTML, CSS, and JavaScript</p>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/AIpetname.png" alt="ai pet name app" class="img-fluid rounded mb-3 my-work-unit">
-                    <h3 class="text-center">AI Pet Name App</h3>
-                    <p class="text-center">Built with HTML, CSS, and JavaScript</p>
-                </div>
-                <div class="col-md-6">
-                    <img src="images/PleinAirApp.png" alt="plein air art app"
-                        class="img-fluid rounded mb-3 my-work-unit">
-                    <h3 class="text-center">Plein Air App</h3>
-                    <p class="text-center">Built with HTML and CSS</p>
-                </div>
+            <div class="col-md-6 mt-3">
+                <img src="images/WorldClock.png" alt="world clock app" class="img-fluid rounded mb-3 my-work-unit">
+                <h3 class="text-center">World Clock App</h3>
+                <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+            </div>
+            <div class="col-md-6 mt-3">
+                <img src="images/AIpetname.png" alt="ai pet name app" class="img-fluid rounded mb-3 my-work-unit">
+                <h3 class="text-center">AI Pet Name App</h3>
+                <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+            </div>
+            <div class="col-md-6 mt-3">
+                <img src="images/PleinAirApp.png" alt="plein air art app" class="img-fluid rounded mb-3 my-work-unit">
+                <h3 class="text-center">Plein Air App</h3>
+                <p class="text-center">Built with HTML, CSS, and JavaScript</p>
             </div>
         </div>
+    </div>
 
-    </body>
 </body>
 
 </html>
