--- a/mywork.html
+++ b/mywork.html
@@ -61,7 +61,29 @@
             </div>
         </div>
     </div>
-
+    <div class="container">
+        <footer>
+            <div class="contact-box d-none d-md-flex justify-content-around mb-5 rounded">
+                <div class="mt-3">
+                    <h4>Work Inquiry</h4>
+                    <p>Let's work together!</p>
+                </div>
+                <div class="mt-3">
+                    <a href="" class="btn btn-branded">Contact Me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:greenough.hayley@gmail.com" class="email-link">greenough.hayley@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://github.com/greenough-h" target="_blank"> <i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/hayley-greenough/" target="_blank"> <i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/hayleygreenough.art/" target="_blank"> <i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
