Updated footer and contact info

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </a>
             <ul>
                 <li> <a href="/">Home </a></li>
-                <li> <a href="/about.html">About</a> </li>
+                <li> <a href="/about.html" class="active">About</a> </li>
                 <li> <a href="/mywork.html">My Work</a> </li>
                 <li> <a href="/contact.html">Contact Me</a> </li>
             </ul>
@@ -71,6 +71,11 @@
                         class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/hayleygreenough.art/" target="_blank"> <i
                         class="fa-brands fa-square-instagram"></i></a>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <p class>
+                    This code is <a href="https://github.com/greenough-h/Portfolio-scratch-project">open sourced</a>
+                </p>
             </div>
         </footer>
     </div>
