--- a/contact.html
+++ b/contact.html
@@ -29,39 +29,36 @@
                 <li> <a href="/">Home </a></li>
                 <li> <a href="/about.html">About</a> </li>
                 <li> <a href="/mywork.html">My Work</a> </li>
-                <li> <a href="/contact.html">Contact Me</a> </li>
+                <li> <a href="/contact.html" class="active">Contact Me</a> </li>
             </ul>
         </nav>
     </div>
     <div class="content-container mb-4">
         <div class="content mt-5">
             <h1 class="mb-5">Let's get in touch!</h1>
-            <h3>Email</h3>
-            <h3>LinkedIn</h3>
-            <h3>Github</h3>
+            <h3 class="mt-4">Email</h3>
+            <a href="mailto:greenough.hayley@gmail.com" class="contact-link">greenough.hayley@gmail.com</a>
+            <h3 class="mt-4">LinkedIn</h3>
+            <a href="https://www.linkedin.com/in/hayley-greenough/" target="_blank" class="contact-link">My Profile</a>
+            <h3 class="mt-4">Github</h3>
+            <a href="https://github.com/greenough-h" target="_blank" class="contact-link"> My Profile</a>
         </div>
 
     </div>
     <div class="container">
         <footer>
-            <div class="contact-box d-none d-md-flex justify-content-around mb-5 rounded">
-                <div class="mt-3">
-                    <h4>Work Inquiry</h4>
-                    <p>Let's work together!</p>
-                </div>
-                <div class="mt-3">
-                    <a href="" class="btn btn-branded">Contact Me</a>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center mb-5">
-                <a href="mailto:greenough.hayley@gmail.com" class="email-link">greenough.hayley@gmail.com</a>
-            </div>
+
             <div class="social-links d-flex justify-content-center">
                 <a href="https://github.com/greenough-h" target="_blank"> <i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/hayley-greenough/" target="_blank"> <i
                         class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/hayleygreenough.art/" target="_blank"> <i
                         class="fa-brands fa-square-instagram"></i></a>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <p class>
+                    This code is <a href="https://github.com/greenough-h/Portfolio-scratch-project">open sourced</a>
+                </p>
             </div>
         </footer>
     </div>
