--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
             </a>
             <ul>
-                <li> <a href="/">Home </a></li>
+                <li> <a href="/" class="active">Home </a></li>
                 <li> <a href="/about.html">About</a> </li>
                 <li> <a href="/mywork.html">My Work</a> </li>
                 <li> <a href="/contact.html">Contact Me</a> </li>
@@ -40,7 +40,7 @@
         <h1>Hayley Greenough</h1>
         <p>Front end Developer, based in California</p>
 
-        <a href="#" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Get Started</a>
+        <a href="/contact.html" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Contact Me</a>
     </div>
 
     <div class="home-content-container">
@@ -134,6 +134,11 @@
                         class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/hayleygreenough.art/" target="_blank"> <i
                         class="fa-brands fa-square-instagram"></i></a>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <p class>
+                    This code is <a href="https://github.com/greenough-h/Portfolio-scratch-project">open sourced</a>
+                </p>
             </div>
         </footer>
     </div>
