--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Hayley Greenough">
+    <meta name="description"
+        content="Frontend development [ortfolio of Hayley Greenough. Hayley is a trained frontend dev and this portfolio showcases her most recent projects.">
     <title>Hayley Greenough Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -24,8 +25,8 @@
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
-            <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            <a href="/" title="Home"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
+            <a href="/" title="Home" s> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
             </a>
             <ul>
                 <li> <a href="/" class="active">Home </a></li>
