updated nav bar responsive styling
logo-small sizing added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/" title="Home"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
-            <a href="/" title="Home" s> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            <a href="/" title="Home" s> <img src="images/logo_small.png" alt="" class="logo-small d-block d-md-none">
             </a>
             <ul>
                 <li> <a href="/" class="active">Home </a></li>
@@ -41,12 +41,12 @@
         <h1>Hayley Greenough</h1>
         <p>Front end Developer, based in California</p>
 
-        <a href="/contact.html" class="btn btn-branded"><i class="fa-solid fa-frog"></i> Contact Me</a>
+        <a href="/contact.html" class="btn btn-branded mt-5"><i class="fa-solid fa-frog"></i> Contact Me</a>
     </div>
 
     <div class="home-content-container">
-        <p class="text-center mt-5 mb-5 description-top-sentence">Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Sapiente quisquam </p>
+        <p class="text-center mt-5 mb-5 description-top-sentence">Take a quick look at a few of the applications I've
+            created here: </p>
         <div class="row mb-5">
             <div class="col d-none d-md-block">
                 <img src="images/weather.png" alt="Weather App homepage image" class="img-fluid homepage-img">
