--- a/mywork.html
+++ b/mywork.html
@@ -26,7 +26,7 @@
     <div class="container">
         <nav class="d-flex justify-content-between">
             <a href="/"> <img src="images/logo.png" alt="" class="img-fluid logo d-none d-md-block"> </a>
-            <a href="/"> <img src="images/logo_small.png" alt="" class="logo d-block d-md-none">
+            <a href="/"> <img src="images/logo_small.png" alt="" class="logo-small d-block d-md-none">
             </a>
             <ul>
                 <li> <a href="/">Home </a></li>
