--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p>Let's work together!</p>
                 </div>
                 <div class="mt-3">
-                    <a href="" class="btn btn-branded">Contact Me</a>
+                    <a href="/contact.html" class="btn btn-branded">Contact Me</a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-5">
