--- a/about.html
+++ b/about.html
@@ -40,10 +40,18 @@
             <div class="col-lg content mt-3">
                 <h1 class="mb-4">Hi, I'm Hayley Greenough</h1>
                 <h2 class="mb-4">Frontend Developer, based in California</h2>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo labore velit facere saepe
-                    sit illum
-                    alias quod quis nobis. Ullam iste beatae, harum fugiat iusto vel distinctio saepe provident
-                    reprehenderit!</p>
+                <p>
+                    I've always had an artistic eye. Whether it be studio art or dance,
+                    creativity always drove me and has brought me joy. I also thoroughly
+                    enjoy the puzzle that coding presents. I have a few years of data
+                    science and ML experience in R and sought to find a way to marry
+                    these two with front-end development.
+                </p>
+                <p class="mb-5">
+                    I have experience building websites with HTML, CSS, JavaScript, and
+                    React. I am happily open to work on new projects - feel free to
+                    reach out to me if you're interested in working together!
+                </p>
                 <a href="/mywork.html" class="btn-branded text-decoration-none"> View Projects</a>
             </div>
             <div class="col-lg profile-pic">
