--- a/index.html
+++ b/index.html
@@ -54,13 +54,9 @@
             <div class="col">
                 <div class="site-description">
                     <h2 class="mb-4">Weather App</h2>
-                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
-                        maxime
-                        rem
-                        rerum ad
-                        dignissimos
-                        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
-                        similique.
+                    <p class="mt-4">A current weather and forecast application. You can search any city in the Open
+                        Weather API and view a 6 day forecast.
+                        Built in React and is responsive.
                     </p>
                     <a href="https://cool-pastelito-weather-app.netlify.app/" target="_blank"
                         class="btn btn-branded-outline mt-4">
@@ -73,13 +69,11 @@
             <div class="col">
                 <div class="site-description">
                     <h2 class="mb-4">AI Pet Name App</h2>
-                    <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid totam
-                        maxime
-                        rem
-                        rerum ad
-                        dignissimos
-                        aliquam? Ullam, nesciunt quidem, consequuntur cum, non earum veniam quod debitis ut ad
-                        similique.
+                    <p class="mt-4">The AI Pet Name Generator is built in React and uses the API of SheCodes to put
+                        together a relevant query based on the
+                        species and ~vibe~ of your pet. It then produces a name for your pet. Rarely ever misses
+                        (depending on your
+                        interpretation of rarely).
                     </p>
                     <a href="https://rolypoly-petnames.netlify.app/" target="_blank"
                         class="btn btn-branded-outline mt-4">
